# roaming

app/: pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/fun/custer/app/: MainActivity.kt
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api.dart
app/lib/app/modules/home/components/: connect_db_widget.dart  db_container_widget.dart  define_name_widget.dart  field_info_widget.dart  index.dart  preview_dialog_widget.dart  select_db_widget.dart  tool_box_widget.dart
app/lib/app/modules/home/controllers/: home_controller.dart  sql_to_code_controller.dart
app/lib/app/modules/home/model/: dbcolumn.dart  dbname.dart  dbtables.dart
app/lib/app/modules/home/views/: home_view.dart
app/lib/flutter_flow/: flutter_flow_drop_down.dart  flutter_flow_theme.dart  flutter_flow_util.dart  flutter_flow_widgets.dart  index.dart  internationalization.dart  place.dart
app/lib/utils/: index.dart  string_fun.dart
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/runner/: Runner.rc
examples/: .gitignore
examples/axum-live/: Cargo.toml  README.md
examples/axum-live/examples/: basic.rs
examples/boilerplate/: README.md
examples/boilerplate/server/: .env.example  Cargo.toml  README.md
examples/boilerplate/server/src/: config.rs  db.rs  error.rs  main.rs  route.rs  state.rs
examples/rust-web-application-clean-architecture/: README.md
examples/rust-web-application-clean-architecture/server/: Cargo.toml
examples/rust-web-application-clean-architecture/server/src/: error.rs
server/: .env.example  Cargo.toml  README.md  env.json  previewTemp.drawio  web.http
server/src/: config.rs  error.rs  lib.rs  main.rs
server/src/handler/: mod.rs  sys_auto_code.rs  sys_initdb.rs
server/src/model/: mod.rs  response.rs  sys_initdb.rs
server/src/service/: mod.rs  sys_auto_code.rs  sys_initdb.rs
server/static/: index.html
server/templates/: api.go.tera  api.js.tera  router.go.tera
