[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
thiserror = "1" # 错误定义和处理

axum = "0.4"
serde = {version = "1", features = ["derive"]}# 序列化/反序列化数据  
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.2", features = ["add-extension", "trace", "fs"]}

config = "0.11" 
dotenv = "0.15" 
tracing = "0.1" # 日志处理
tracing-subscriber = "0.3" # 日志和追踪
