[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
thiserror = "1" # 错误定义和处理

axum = "0.4"
bytes = "1"
futures = "0.3"
http = "0.2"
http-body = "0.4"
serde = {version = "1", features = ["derive"]}# 序列化/反序列化数据  
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.2", features = ["add-extension", "trace", "fs"]}

config = "0.11" # 配置文件
dotenv = "0.15" # 环境变量
lazy_static = "1" # 通过宏更方便地初始化静态变量
tera = "1" # 模板引擎
tracing = "0.1" # 日志处理
tracing-subscriber = "0.3" # 日志和追踪

chrono = {version = "0.4", features = ["serde"]}
mysql = "21"
sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "mysql"]}
